@@ -38,14 +38,12 @@ void sc_gui_kb_toggle_typing_activate_cb(guint key_id);
 
 void sc_gui_create_edit_menu(void);
 
-void sc_gui_create_menu(GtkWidget *sp_item);
-
 void sc_gui_update_editor_menu_cb(GObject *obj, const gchar *word, gint pos,
 								  GeanyDocument *doc, gpointer user_data);
 
 void sc_gui_update_toolbar(void);
 
-void sc_gui_update_menu(void);
+void sc_gui_update_menu();
 
 void sc_gui_init(void);
 
