@@ -1,3 +1,11 @@
+2009-09-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/scplugin.c, src/scplugin.h, src/gui.c, src/gui.h, src/speller.c:
+   Allow setting a custom dictionary directory without reloading
+   the plugin.
+   Minor fixes.
+
+
 2009-09-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/scplugin.c, src/speller.c, src/scplugin.h:
